fix overflow-x

--- a/css/general.css
+++ b/css/general.css
@@ -120,6 +120,7 @@ body {
   font-weight: 400;
   color: #333;
   font-family: 'Rubik', sans-serif;
+  overflow-x: hidden;
 }
 
 strong {
