--- a/css/queries.css
+++ b/css/queries.css
@@ -180,8 +180,12 @@
     grid-row: 1;
   }
 
-  .header .logo, .logo {
+  .header .logo {
     font-size: 3.6rem;
+  }
+
+  .logo {
+    font-size: 3rem;
   }
 }
 
